--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="contenedor">
   <div class="box"> 
     <form autocomplete="off">
       <h2>SignIn</h2>
@@ -28,5 +29,6 @@
       </div>
       <input type="submit" value="Login">
     </form>
-  </body>
+  </div>
+</body>
 </html>
